# json2id3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README  README_OSX  cmake_install.cmake  main.cpp  tagger
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
test/: test.json
test/clean/: clean.aif  clean.json  code_tags.json
test/dirty/: dirty.json
